# CardGame

./: .gitignore  .gitmodules  CMakeLists.txt
.cache/clangd/index/: Application.cpp.EA37B8854FE97940.idx  Application.h.147A681E2C65FC96.idx  Entity.cpp.B27E706D7594CD1F.idx  Entity.h.CA44884FCEA13DB9.idx  Math.cpp.AE208B2FF82DB802.idx  Math.h.3F4D937513EAF1B5.idx  Renderer.cpp.EF62359A0B99F10E.idx  Renderer.h.E8BED55658394ED1.idx  Shader.cpp.603CB072D2B70253.idx  Shader.h.A5981AFBDE09AA0E.idx  Sprite.cpp.DF04693710F02E9B.idx  Sprite.h.C2E786FDBB9C7764.idx  Texture.cpp.5D8D5F554FB786DA.idx  Texture.h.E9B6676762858A6A.idx  VertexArray.cpp.A08A3C48A6D36A4A.idx  VertexArray.h.F873C24F0874305B.idx  Window.cpp.16CC541E41E255F1.idx  Window.h.402C8539D22A5A15.idx  context.c.ADC66367F913D432.idx  egl_context.c.02B5712AF73471B5.idx  glad.c.EB934DAE30D25452.idx  glad.h.9ACA992E48371B05.idx  glfw3.h.7DF23CF1A8BDFE4A.idx  glfw3native.h.2C7C4E226605209A.idx  glx_context.c.55A583090F85D57A.idx  init.c.C0B5DD5ACAE76591.idx  input.c.9ACEB7E583EB394F.idx  internal.h.C2B62501AA397155.idx  khrplatform.h.6782D820E1D1A80D.idx  linux_joystick.c.24C1D0B5F7A56B9D.idx  linux_joystick.h.D074BC5C649EA394.idx  main.cpp.2AD1B163BA2CE0A0.idx  mappings.h.5565CA91C5078EA6.idx  monitor.c.B0B10B191D950BDA.idx  null_init.c.9DF0E11E4D4C196B.idx  null_joystick.c.8282096C345D5C56.idx  null_joystick.h.46E4831FE0F82767.idx  null_monitor.c.619B0C71BDEA0198.idx  null_platform.h.18B87451D4957058.idx  null_window.c.3D7D78A909D531AC.idx  (+24 more)
include/: Application.h  Cards.h  Game.h  Math.h  Window.h
include/Entity/: Deck.h  Entity.h  Sprite.h
include/Renderer/: Renderer.h  Shader.h  Texture.h  VertexArray.h
run/: clean.sh  run.bat  run.sh
src/: Application.cpp  Deck.cpp  Entity.cpp  Game.cpp  Renderer.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  VertexArray.cpp  Window.cpp  main.cpp  stb_image.cpp
